--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Node client that uses the Almond+ websocket API to do stuff.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test.js"
   },
   "author": "Thomas Purchas",
   "license": "ISC",
