--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   },
   "author": "Thomas Purchas",
   "license": "ISC",
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/thomaspurchas/almond-client"
+  },
   "dependencies": {
     "debug": "^2.6.0",
     "randomstring": "^1.1.5",
